// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: BrandBar snapshot - mobile 1`] = `
.c9 {
  vertical-align: middle;
}

.c12 {
  margin-right: 8px;
  vertical-align: middle;
}

.c6 {
  cursor: pointer;
  border: none;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  color: inherit;
  font: inherit;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 60px;
  height: 60px;
  padding: 8px;
}

.c6:active,
.c6:focus {
  outline: none;
}

.c6::-moz-focus-inner {
  border: none;
}

.c6 img,
.c6 svg {
  width: 24px;
  height: 24px;
}

.c6:hover {
  color: hsl(200,96%,35%);
}

.c6.c6.c6.c6:focus {
  box-shadow: inset 0px 0px 0px 1px hsl(200,96%,35%);
}

.c6.c6.c6.c6[aria-expanded='true'] {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
  box-shadow: none;
}

.c8 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8:empty {
  display: none;
}

.c8.cactus-layout-floatLeft,
.c8.cactus-layout-fixedLeft {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: inset -1px 0px 0px 0px hsl(200,29%,90%);
}

.c8.cactus-layout-floatLeft .c5,
.c8.cactus-layout-fixedLeft .c5 {
  box-shadow: inset 0px -1px 0px 0px hsl(200,29%,90%);
}

.c8.cactus-layout-floatLeft .c5:hover,
.c8.cactus-layout-fixedLeft .c5:hover {
  box-shadow: inset 0px -1px 0px 0px hsl(200,96%,35%);
}

.c8.cactus-layout-fixedBottom {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-shadow: inset 0px 1px 0px 0px hsl(200,29%,90%);
}

.c8.cactus-layout-fixedBottom .c5[aria-expanded='true']::after {
  content: '';
  z-index: 99;
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  bottom: 60px;
  left: 0;
  right: 0;
  cursor: default;
}

.c7 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  box-sizing: border-box;
  z-index: 100;
  outline: none;
  display: block;
  height: auto;
  width: auto;
  overflow: auto;
  padding: 8px;
}

.c7[aria-hidden='true'] {
  display: none;
}

.c4 {
  outline: none;
  border: none;
  margin: 0;
  padding: 0;
  display: block;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c10 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  font-size: 15px;
  line-height: 1.6;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c10 [role='menuitem'] {
  padding: 18px 16px;
  border-bottom: 1px solid hsl(200,29%,90%);
  position: relative;
  overflow: visible;
}

.c10 [role='menuitem'] .sc-iNqMTl {
  -webkit-transform: rotateZ(-90deg);
  -ms-transform: rotateZ(-90deg);
  transform: rotateZ(-90deg);
}

.c10 [role='menuitem'][aria-expanded='true'] {
  color: hsl(200,96%,35%);
}

.c10 [role='menuitem'][aria-expanded='true'] .sc-iNqMTl {
  -webkit-transform: rotateZ(90deg);
  -ms-transform: rotateZ(90deg);
  transform: rotateZ(90deg);
}

.c10 [role='menuitem']:hover {
  color: hsl(200,96%,35%);
  border-bottom-color: hsl(200,96%,35%);
}

.c10 [role='menuitem']:focus::after {
  border: 1px solid hsl(200,96%,35%);
  background-color: transparent;
  box-sizing: border-box;
  width: 100%;
  height: calc(100% + 1px);
  content: '';
  position: absolute;
  left: 0;
  top: 0;
}

.c10 [role='menuitem'][aria-current='true'],
.c10 [role='menuitem'][aria-expanded='true'] {
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  box-shadow: inset 0px -1px 0px 0px hsl(200,29%,90%);
}

.c1 {
  padding: 16px;
}

.c1,
.c1 * {
  display: block;
  max-width: 200px;
  max-height: 80px;
}

.c13 {
  list-style: none;
  padding: 0;
  margin: 0;
  outline: none;
}

.c11 {
  text-align: right;
  box-sizing: border-box;
  display: block;
  overflow-wrap: break-word;
  padding: 18px 16px;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,96%,35%);
  box-shadow: inset 0px -1px 0px 0px hsl(200,96%,35%);
}

.c11 svg {
  font-size: 12px;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  height: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  width: 100%;
}

.c14:active,
.c14:focus {
  outline: none;
}

.c14::-moz-focus-inner {
  border: none;
}

@media screen and (min-width:1024px) {
  .c10 {
    font-size: 15px;
    line-height: 1.6;
  }
}

@media screen and (min-width:1024px) {
  .c11 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2 c3"
    >
      <div
        class="c4"
        id="typed"
        role="none"
        tabindex="-1"
      >
        <button
          aria-controls="typed-popup"
          aria-haspopup="dialog"
          aria-label="Typing"
          class="c5 c6"
          id="typed-button"
          role="button"
          type="button"
        >
          Type
        </button>
        <div
          aria-hidden="true"
          aria-labelledby="typed-button"
          class="c7"
          id="typed-popup"
          role="dialog"
          tabindex="-1"
        >
          <input
            placeholder="Type Here"
            type="text"
          />
        </div>
      </div>
      <div
        class="c8 cactus-layout-fixedBottom"
      >
        <div
          class="c4"
          id="user-menu"
          role="none"
          tabindex="-1"
        >
          <button
            aria-controls="user-menu-popup"
            aria-haspopup="menu"
            class="c5 c6"
            id="user-menu-button"
            role="button"
            type="button"
          >
            <svg
              class="c9"
              fill="currentcolor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,14 C8.66390125,14 6,11.0697086 6,7.5 C6,3.93029138 8.66390125,1 12,1 C15.3360987,1 18,3.93029138 18,7.5 C18,11.0697086 15.3360987,14 12,14 Z M12,12 C14.1867487,12 16,10.0054236 16,7.5 C16,4.99457638 14.1867487,3 12,3 C9.81325125,3 8,4.99457638 8,7.5 C8,10.0054236 9.81325125,12 12,12 Z M2.45149933,22.6626662 C2.13244151,23.1134661 1.50834851,23.2202642 1.05754861,22.9012064 C0.606748712,22.5821485 0.499950658,21.9580555 0.819008481,21.5072556 C3.90518485,17.1467671 7.65108363,14.9179688 12,14.9179688 C16.3564684,14.9179688 20.0355137,17.1550465 22.9722241,21.5273973 C23.2801579,21.9858678 23.1581239,22.6071613 22.6996535,22.9150951 C22.241183,23.223029 21.6198895,23.100995 21.3119556,22.6425246 C18.7258796,18.7922191 15.6435316,16.9179688 12,16.9179688 C8.34891637,16.9179688 5.18498442,18.8004986 2.45149933,22.6626662 Z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            aria-labelledby="user-menu-button"
            class="c10 c7"
            id="user-menu-popup"
            role="menu"
            tabindex="-1"
          >
            <div
              class="c11"
            >
              <svg
                class="c12"
                fill="currentcolor"
                height="1em"
                mr="8px"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12,14 C8.66390125,14 6,11.0697086 6,7.5 C6,3.93029138 8.66390125,1 12,1 C15.3360987,1 18,3.93029138 18,7.5 C18,11.0697086 15.3360987,14 12,14 Z M12,12 C14.1867487,12 16,10.0054236 16,7.5 C16,4.99457638 14.1867487,3 12,3 C9.81325125,3 8,4.99457638 8,7.5 C8,10.0054236 9.81325125,12 12,12 Z M2.45149933,22.6626662 C2.13244151,23.1134661 1.50834851,23.2202642 1.05754861,22.9012064 C0.606748712,22.5821485 0.499950658,21.9580555 0.819008481,21.5072556 C3.90518485,17.1467671 7.65108363,14.9179688 12,14.9179688 C16.3564684,14.9179688 20.0355137,17.1550465 22.9722241,21.5273973 C23.2801579,21.9858678 23.1581239,22.6071613 22.6996535,22.9150951 C22.241183,23.223029 21.6198895,23.100995 21.3119556,22.6425246 C18.7258796,18.7922191 15.6435316,16.9179688 12,16.9179688 C8.34891637,16.9179688 5.18498442,18.8004986 2.45149933,22.6626662 Z"
                />
              </svg>
              Test name
            </div>
            <ul
              class="c13"
            >
              <li
                role="none"
              >
                <span
                  class="c14"
                  role="menuitem"
                  tabindex="-1"
                >
                  Settings
                </span>
              </li>
              <li
                role="none"
              >
                <span
                  class="c14"
                  role="menuitem"
                  tabindex="-1"
                >
                  Logout
                </span>
              </li>
            </ul>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`component: BrandBar snapshot 1`] = `
.c5 {
  margin-right: 8px;
  vertical-align: middle;
}

.c7 {
  margin-left: 8px;
  vertical-align: middle;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  width: 100%;
  box-shadow: inset 0px -1px 0px 0px hsl(200,29%,90%);
}

.c1 {
  padding: 16px;
}

.c1,
.c1 * {
  display: block;
  max-width: 200px;
  max-height: 80px;
}

.c4 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  margin-right: 5px;
  background-color: transparent;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  cursor: pointer;
  margin: 0;
  border-radius: 0;
}

.c4:focus {
  box-shadow: inset 0px 0px 0px 1px hsl(200,96%,35%);
  outline: none;
}

.c4[aria-expanded='true'] {
  box-shadow: inset 0px -1px 0px 0px hsl(200,96%,35%);
  color: hsl(200,96%,35%);
}

.c4[aria-expanded='true'] .c6 {
  -webkit-transform: scaleY(-1);
  -ms-transform: scaleY(-1);
  transform: scaleY(-1);
}

.c4:hover {
  color: hsl(200,96%,35%);
}

.c4 svg {
  font-size: 12px;
}

.c8 {
  display: block;
  position: fixed;
  outline: none;
  padding: 8px 0;
  margin-top: 8px;
  border-radius: 4px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
  background-color: hsl(0,0%,100%);
  list-style: none;
}

.c8[aria-hidden] {
  display: none;
}

.c8 [role='menuitem'] {
  z-index: 110;
  box-sizing: border-box;
  position: relative;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  font-size: 15px;
  line-height: 1.6;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  outline: none;
  padding: 4px 16px;
  text-align: center;
}

.c8 [role='menuitem']:focus,
.c8 [role='menuitem']:hover {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  height: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  width: 100%;
}

.c9:active,
.c9:focus {
  outline: none;
}

.c9::-moz-focus-inner {
  border: none;
}

@media screen and (min-width:1024px) {
  .c4 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c8 [role='menuitem'] {
    font-size: 15px;
    line-height: 1.6;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2 c3"
    >
      <input
        placeholder="Type Here"
        type="text"
      />
      <div
        id="user-menu"
        role="none"
        tabindex="-1"
      >
        <button
          aria-controls="user-menu-popup"
          aria-haspopup="menu"
          class="c4"
          id="user-menu-button"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="c5"
            fill="currentcolor"
            height="1em"
            mr="8px"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,14 C8.66390125,14 6,11.0697086 6,7.5 C6,3.93029138 8.66390125,1 12,1 C15.3360987,1 18,3.93029138 18,7.5 C18,11.0697086 15.3360987,14 12,14 Z M12,12 C14.1867487,12 16,10.0054236 16,7.5 C16,4.99457638 14.1867487,3 12,3 C9.81325125,3 8,4.99457638 8,7.5 C8,10.0054236 9.81325125,12 12,12 Z M2.45149933,22.6626662 C2.13244151,23.1134661 1.50834851,23.2202642 1.05754861,22.9012064 C0.606748712,22.5821485 0.499950658,21.9580555 0.819008481,21.5072556 C3.90518485,17.1467671 7.65108363,14.9179688 12,14.9179688 C16.3564684,14.9179688 20.0355137,17.1550465 22.9722241,21.5273973 C23.2801579,21.9858678 23.1581239,22.6071613 22.6996535,22.9150951 C22.241183,23.223029 21.6198895,23.100995 21.3119556,22.6425246 C18.7258796,18.7922191 15.6435316,16.9179688 12,16.9179688 C8.34891637,16.9179688 5.18498442,18.8004986 2.45149933,22.6626662 Z"
            />
          </svg>
          <span>
            Test name
          </span>
          <svg
            aria-hidden="true"
            class="c6 c7"
            fill="currentcolor"
            height="1em"
            ml="8px"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
              transform="rotate(-90 12 12)"
            />
          </svg>
        </button>
        <ul
          aria-hidden="true"
          aria-labelledby="user-menu-button"
          class="c8"
          id="user-menu-popup"
          role="menu"
          tabindex="-1"
        >
          <li
            role="none"
          >
            <span
              class="c9"
              role="menuitem"
              tabindex="-1"
            >
              Settings
            </span>
          </li>
          <li
            role="none"
          >
            <span
              class="c9"
              role="menuitem"
              tabindex="-1"
            >
              Logout
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
